--- a/web/src/styles/sass/guestdashboard/guestDashboard.scss
+++ b/web/src/styles/sass/guestdashboard/guestDashboard.scss
@@ -1,5 +1,5 @@
 .guest-dashboard-page-body {
-    padding: 2rem;
+    padding: 3rem;
     font-family: 'Segoe UI', sans-serif;
     min-height: 100vh;
 
